# LibrEdgeTPU

./: .gitignore  CODEREVIEW.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md
docs/: ADVANCED_README.md  GUI_GUIDE.md  GUI_OPTICAL_FLOW_PIPELINE.md  HARDWARE_ANALYSIS.md  MATMUL_ENGINE_NOTES.md  OPTICAL_FLOW_ENGINEERING_LOG.md  OPTICAL_FLOW_THEORY.md  ROBOTICS_STATUS.md  VISUAL_TESTS.md
examples/: README.md  _common.py  embedding_similarity_example.py  looming_detector_example.py  matmul_engine_example.py  optical_flow_example.py  pattern_tracker_example.py  reservoir_computer_example.py  simple_invoker_example.py  spot_tracker_example.py  visual_compass_example.py
experiments/: OPTICAL_FLOW_GUI_FIX_LOG.md  README.md  correct_tflite_testing.py  debug_optical_flow.py  debug_single_pixel.py  diag_gui_loop.py  diag_panning_corr.py  diag_panning_trace.py  diag_pooled_flow.py  diag_webcam_flow.py  diagnose_optical_flow.py  dump_gabor_weights.py  exp1_recompilation_consistency.py  exp1_verify_tile_layout.py  exp1b_detailed_check.py  exp1c_fixed_scale.py  exp2_relayout_edge_test.py  exp2_spot_tracker_cpu_vs_tpu.py  exp2b_relayout_edge_refined.py  exp3_param_blob_format.py  exp3b_validate_blob_gen.py  exp4_conv2d_blob_format.py  exp4_pooled_relayout.py  exp4b_validate_conv2d_offsets.py  exp5_full_pipeline.py  inspect_intermediate_tensors.py  inspect_simple_model.py  test_against_manual_gabor.py  test_all_transposes.py  test_channel_permutation.py  test_conv2d_vs_depthwise.py  test_depthwise_fundamentals.py  test_dma_hints.py  test_edge_localization.py  test_edgetpu_features.py  test_edgetpu_vs_cpu.py  test_identity_model.py  test_minimal_reference.py  test_output_layout.py  test_pooled_vs_unpooled.py  (+10 more)
libredgetpu/: __init__.py  _base.py  _constants.py  _quantize.py  _usb_accel.c  delegate.py  driver.py  embedding_similarity.py  looming_detector.py  looming_gen.py  matmul_engine.py  optical_flow_gen.py  optical_flow_module.py  pattern_tracker.py  pattern_tracker_gen.py  registers.py  reservoir.py  simple_invoker.py  spot_tracker.py  spot_tracker_gen.py  template_gen.py  tflite_builder.py  tflite_parser.py  transport.py  visual_compass.py
tests/: benchmark_vs_tflite.py  conftest.py  diagnose_spot_tracker.py  model_zoo.py  test_cpu_replica.py  test_embedding_similarity.py  test_error_handling.py  test_gabor_orientation.py  test_ground_truth.py  test_hardware.py  test_looming.py  test_matmul_engine.py  test_optical_flow.py  test_parse_models.py  (+8 more)
(+151 files in other folders)
